erDiagram
  USER {
    int        userId
    string     username
    string     email
    string     passwordHash
    string     profilePictureUrl
    date       createdAt
    date       updatedAt
  }

  TEAM {
    int        id
    string     name
    date       createdAt
    date       updatedAt
  }

  PROJECT {
    int        id
    string     name
    string     description
    date       startDate
    date       endDate
    date       createdAt
    date       updatedAt
  }

  PROJECTTEAM {
    int        id
    int        projectId
    int        teamId
    date       createdAt
  }

  TASK {
    int        id
    string     title
    string     description
    string     status
    string     priority
    string     tags
    date       startDate
    date       dueDate
    int        points
    int        projectId
    int        authorUserId
    int        assignedUserId
    date       createdAt
    date       updatedAt
  }

  TASKASSIGNMENT {
    int        id
    int        taskId
    int        userId
    date       createdAt
  }

  ATTACHMENT {
    int        id
    int        taskId
    string     fileName
    string     fileURL
    date       createdAt
  }

  COMMENT {
    int        id
    int        taskId
    int        authorUserId
    string     content
    date       createdAt
  }

  TASKACTIVITY {
    int        id
    int        taskId
    int        userId
    string     type
    string     field
    string     oldValue
    string     newValue
    date       createdAt
  }

  USER ||--o{ TASK : authors
  USER ||--o{ TASKASSIGNMENT : assigned_via
  USER ||--o{ COMMENT : writes
  USER ||--o{ TASKACTIVITY : performs

  TEAM ||--o{ PROJECTTEAM : has
  PROJECT ||--o{ PROJECTTEAM : belongs_to

  PROJECT ||--o{ TASK : contains

  TASK ||--o{ ATTACHMENT : has
  TASK ||--o{ COMMENT : has
  TASK ||--o{ TASKASSIGNMENT : has
  TASK ||--o{ TASKACTIVITY : logs